hw10/y.output
Terminals unused in grammar

   LABEL
   GOTO
   IFTRUE
   IFFALSE


State 66 conflicts: 1 shift/reduce


Grammar

    0 $accept: lines $end

    1 lines: lines stmts '\n'
    2      | lines decls '\n'
    3      | lines error '\n'
    4      | /* empty */

    5 decls: type ident ';'
    6      | type ident '[' number ']' ';'

    7 type: CHAR
    8     | SHORT
    9     | INT
   10     | LONG

   11 stmts: IF '(' expr ')' stmts
   12      | IF '(' expr ')' stmts ELSE stmts
   13      | ident '=' expr ';'

   14 expr: expr '+' expr
   15     | expr '-' expr
   16     | expr '*' expr
   17     | expr '/' expr
   18     | expr '|' expr
   19     | expr '^' expr
   20     | expr '&' expr
   21     | expr '%' expr
   22     | expr LE expr
   23     | expr GE expr
   24     | expr EQ expr
   25     | expr NE expr
   26     | expr '<' expr
   27     | expr '>' expr
   28     | '(' expr ')'
   29     | '~' expr
   30     | '-' expr
   31     | number
   32     | ident
   33     | ident '[' expr ']'

   34 number: CONSTANT

   35 ident: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2 3
'%' (37) 21
'&' (38) 20
'(' (40) 11 12 28
')' (41) 11 12 28
'*' (42) 16
'+' (43) 14
'-' (45) 15 30
'/' (47) 17
';' (59) 5 6 13
'<' (60) 26
'=' (61) 13
'>' (62) 27
'[' (91) 6 33
']' (93) 6 33
'^' (94) 19
'|' (124) 18
'~' (126) 29
error (256) 3
CONSTANT (258) 34
IDENTIFIER (259) 35
CHAR (260) 7
SHORT (261) 8
INT (262) 9
LONG (263) 10
IF (264) 11 12
ELSE (265) 12
LE (266) 22
GE (267) 23
EQ (268) 24
NE (269) 25
LABEL (270)
GOTO (271)
IFTRUE (272)
IFFALSE (273)
UMINUS (274)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
lines (39)
    on left: 1 2 3 4, on right: 0 1 2 3
decls (40)
    on left: 5 6, on right: 2
type (41)
    on left: 7 8 9 10, on right: 5 6
stmts (42)
    on left: 11 12 13, on right: 1 11 12
expr (43)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
    32 33, on right: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
    27 28 29 30 33
number (44)
    on left: 34, on right: 6 31
ident (45)
    on left: 35, on right: 5 6 13 32 33


State 0

    0 $accept: . lines $end

    $default  reduce using rule 4 (lines)

    lines  go to state 1


State 1

    0 $accept: lines . $end
    1 lines: lines . stmts '\n'
    2      | lines . decls '\n'
    3      | lines . error '\n'

    $end        shift, and go to state 2
    error       shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    CHAR        shift, and go to state 5
    SHORT       shift, and go to state 6
    INT         shift, and go to state 7
    LONG        shift, and go to state 8
    IF          shift, and go to state 9

    decls  go to state 10
    type   go to state 11
    stmts  go to state 12
    ident  go to state 13


State 2

    0 $accept: lines $end .

    $default  accept


State 3

    3 lines: lines error . '\n'

    '\n'  shift, and go to state 14


State 4

   35 ident: IDENTIFIER .

    $default  reduce using rule 35 (ident)


State 5

    7 type: CHAR .

    $default  reduce using rule 7 (type)


State 6

    8 type: SHORT .

    $default  reduce using rule 8 (type)


State 7

    9 type: INT .

    $default  reduce using rule 9 (type)


State 8

   10 type: LONG .

    $default  reduce using rule 10 (type)


State 9

   11 stmts: IF . '(' expr ')' stmts
   12      | IF . '(' expr ')' stmts ELSE stmts

    '('  shift, and go to state 15


State 10

    2 lines: lines decls . '\n'

    '\n'  shift, and go to state 16


State 11

    5 decls: type . ident ';'
    6      | type . ident '[' number ']' ';'

    IDENTIFIER  shift, and go to state 4

    ident  go to state 17


State 12

    1 lines: lines stmts . '\n'

    '\n'  shift, and go to state 18


State 13

   13 stmts: ident . '=' expr ';'

    '='  shift, and go to state 19


State 14

    3 lines: lines error '\n' .

    $default  reduce using rule 3 (lines)


State 15

   11 stmts: IF '(' . expr ')' stmts
   12      | IF '(' . expr ')' stmts ELSE stmts

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 24
    number  go to state 25
    ident   go to state 26


State 16

    2 lines: lines decls '\n' .

    $default  reduce using rule 2 (lines)


State 17

    5 decls: type ident . ';'
    6      | type ident . '[' number ']' ';'

    ';'  shift, and go to state 27
    '['  shift, and go to state 28


State 18

    1 lines: lines stmts '\n' .

    $default  reduce using rule 1 (lines)


State 19

   13 stmts: ident '=' . expr ';'

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 29
    number  go to state 25
    ident   go to state 26


State 20

   34 number: CONSTANT .

    $default  reduce using rule 34 (number)


State 21

   30 expr: '-' . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 30
    number  go to state 25
    ident   go to state 26


State 22

   29 expr: '~' . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 31
    number  go to state 25
    ident   go to state 26


State 23

   28 expr: '(' . expr ')'

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 32
    number  go to state 25
    ident   go to state 26


State 24

   11 stmts: IF '(' expr . ')' stmts
   12      | IF '(' expr . ')' stmts ELSE stmts
   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr

    LE   shift, and go to state 33
    GE   shift, and go to state 34
    EQ   shift, and go to state 35
    NE   shift, and go to state 36
    '|'  shift, and go to state 37
    '^'  shift, and go to state 38
    '&'  shift, and go to state 39
    '<'  shift, and go to state 40
    '>'  shift, and go to state 41
    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46
    ')'  shift, and go to state 47


State 25

   31 expr: number .

    $default  reduce using rule 31 (expr)


State 26

   32 expr: ident .
   33     | ident . '[' expr ']'

    '['  shift, and go to state 48

    $default  reduce using rule 32 (expr)


State 27

    5 decls: type ident ';' .

    $default  reduce using rule 5 (decls)


State 28

    6 decls: type ident '[' . number ']' ';'

    CONSTANT  shift, and go to state 20

    number  go to state 49


State 29

   13 stmts: ident '=' expr . ';'
   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr

    LE   shift, and go to state 33
    GE   shift, and go to state 34
    EQ   shift, and go to state 35
    NE   shift, and go to state 36
    '|'  shift, and go to state 37
    '^'  shift, and go to state 38
    '&'  shift, and go to state 39
    '<'  shift, and go to state 40
    '>'  shift, and go to state 41
    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46
    ';'  shift, and go to state 50


State 30

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr
   30     | '-' expr .

    $default  reduce using rule 30 (expr)


State 31

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr
   29     | '~' expr .

    $default  reduce using rule 29 (expr)


State 32

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr
   28     | '(' expr . ')'

    LE   shift, and go to state 33
    GE   shift, and go to state 34
    EQ   shift, and go to state 35
    NE   shift, and go to state 36
    '|'  shift, and go to state 37
    '^'  shift, and go to state 38
    '&'  shift, and go to state 39
    '<'  shift, and go to state 40
    '>'  shift, and go to state 41
    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46
    ')'  shift, and go to state 51


State 33

   22 expr: expr LE . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 52
    number  go to state 25
    ident   go to state 26


State 34

   23 expr: expr GE . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 53
    number  go to state 25
    ident   go to state 26


State 35

   24 expr: expr EQ . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 54
    number  go to state 25
    ident   go to state 26


State 36

   25 expr: expr NE . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 55
    number  go to state 25
    ident   go to state 26


State 37

   18 expr: expr '|' . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 56
    number  go to state 25
    ident   go to state 26


State 38

   19 expr: expr '^' . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 57
    number  go to state 25
    ident   go to state 26


State 39

   20 expr: expr '&' . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 58
    number  go to state 25
    ident   go to state 26


State 40

   26 expr: expr '<' . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 59
    number  go to state 25
    ident   go to state 26


State 41

   27 expr: expr '>' . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 60
    number  go to state 25
    ident   go to state 26


State 42

   14 expr: expr '+' . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 61
    number  go to state 25
    ident   go to state 26


State 43

   15 expr: expr '-' . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 62
    number  go to state 25
    ident   go to state 26


State 44

   16 expr: expr '*' . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 63
    number  go to state 25
    ident   go to state 26


State 45

   17 expr: expr '/' . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 64
    number  go to state 25
    ident   go to state 26


State 46

   21 expr: expr '%' . expr

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 65
    number  go to state 25
    ident   go to state 26


State 47

   11 stmts: IF '(' expr ')' . stmts
   12      | IF '(' expr ')' . stmts ELSE stmts

    IDENTIFIER  shift, and go to state 4
    IF          shift, and go to state 9

    stmts  go to state 66
    ident  go to state 13


State 48

   33 expr: ident '[' . expr ']'

    CONSTANT    shift, and go to state 20
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 21
    '~'         shift, and go to state 22
    '('         shift, and go to state 23

    expr    go to state 67
    number  go to state 25
    ident   go to state 26


State 49

    6 decls: type ident '[' number . ']' ';'

    ']'  shift, and go to state 68


State 50

   13 stmts: ident '=' expr ';' .

    $default  reduce using rule 13 (stmts)


State 51

   28 expr: '(' expr ')' .

    $default  reduce using rule 28 (expr)


State 52

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   22     | expr LE expr .
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr

    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46

    $default  reduce using rule 22 (expr)


State 53

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   23     | expr GE expr .
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr

    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46

    $default  reduce using rule 23 (expr)


State 54

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   24     | expr EQ expr .
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr

    LE   shift, and go to state 33
    GE   shift, and go to state 34
    '<'  shift, and go to state 40
    '>'  shift, and go to state 41
    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46

    $default  reduce using rule 24 (expr)


State 55

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   25     | expr NE expr .
   26     | expr . '<' expr
   27     | expr . '>' expr

    LE   shift, and go to state 33
    GE   shift, and go to state 34
    '<'  shift, and go to state 40
    '>'  shift, and go to state 41
    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46

    $default  reduce using rule 25 (expr)


State 56

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   18     | expr '|' expr .
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr

    LE   shift, and go to state 33
    GE   shift, and go to state 34
    EQ   shift, and go to state 35
    NE   shift, and go to state 36
    '^'  shift, and go to state 38
    '&'  shift, and go to state 39
    '<'  shift, and go to state 40
    '>'  shift, and go to state 41
    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46

    $default  reduce using rule 18 (expr)


State 57

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   19     | expr '^' expr .
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr

    LE   shift, and go to state 33
    GE   shift, and go to state 34
    EQ   shift, and go to state 35
    NE   shift, and go to state 36
    '&'  shift, and go to state 39
    '<'  shift, and go to state 40
    '>'  shift, and go to state 41
    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46

    $default  reduce using rule 19 (expr)


State 58

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   20     | expr '&' expr .
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr

    LE   shift, and go to state 33
    GE   shift, and go to state 34
    EQ   shift, and go to state 35
    NE   shift, and go to state 36
    '<'  shift, and go to state 40
    '>'  shift, and go to state 41
    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46

    $default  reduce using rule 20 (expr)


State 59

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   26     | expr '<' expr .
   27     | expr . '>' expr

    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46

    $default  reduce using rule 26 (expr)


State 60

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr
   27     | expr '>' expr .

    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46

    $default  reduce using rule 27 (expr)


State 61

   14 expr: expr . '+' expr
   14     | expr '+' expr .
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr

    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46

    $default  reduce using rule 14 (expr)


State 62

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   15     | expr '-' expr .
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr

    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46

    $default  reduce using rule 15 (expr)


State 63

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   16     | expr '*' expr .
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr

    $default  reduce using rule 16 (expr)


State 64

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   17     | expr '/' expr .
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr

    $default  reduce using rule 17 (expr)


State 65

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   21     | expr '%' expr .
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr

    $default  reduce using rule 21 (expr)


State 66

   11 stmts: IF '(' expr ')' stmts .
   12      | IF '(' expr ')' stmts . ELSE stmts

    ELSE  shift, and go to state 69

    ELSE      [reduce using rule 11 (stmts)]
    $default  reduce using rule 11 (stmts)


State 67

   14 expr: expr . '+' expr
   15     | expr . '-' expr
   16     | expr . '*' expr
   17     | expr . '/' expr
   18     | expr . '|' expr
   19     | expr . '^' expr
   20     | expr . '&' expr
   21     | expr . '%' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . '<' expr
   27     | expr . '>' expr
   33     | ident '[' expr . ']'

    LE   shift, and go to state 33
    GE   shift, and go to state 34
    EQ   shift, and go to state 35
    NE   shift, and go to state 36
    '|'  shift, and go to state 37
    '^'  shift, and go to state 38
    '&'  shift, and go to state 39
    '<'  shift, and go to state 40
    '>'  shift, and go to state 41
    '+'  shift, and go to state 42
    '-'  shift, and go to state 43
    '*'  shift, and go to state 44
    '/'  shift, and go to state 45
    '%'  shift, and go to state 46
    ']'  shift, and go to state 70


State 68

    6 decls: type ident '[' number ']' . ';'

    ';'  shift, and go to state 71


State 69

   12 stmts: IF '(' expr ')' stmts ELSE . stmts

    IDENTIFIER  shift, and go to state 4
    IF          shift, and go to state 9

    stmts  go to state 72
    ident  go to state 13


State 70

   33 expr: ident '[' expr ']' .

    $default  reduce using rule 33 (expr)


State 71

    6 decls: type ident '[' number ']' ';' .

    $default  reduce using rule 6 (decls)


State 72

   12 stmts: IF '(' expr ')' stmts ELSE stmts .

    $default  reduce using rule 12 (stmts)
